--- a/.env.production
+++ b/.env.production
@@ -1,15 +1,8 @@
 # Configuration de production pour Digital Ocean
 NODE_ENV=production
 
-# URLs de l'application
+# URL du serveur Socket.IO (utilisée par le frontend)
 NEXT_PUBLIC_SOCKET_URL=http://164.90.225.146:3001
 
-# Ports des applications
-PORT_CLIENT=3000
-PORT_SERVER=3001
-
-# Configuration Socket.IO
-SOCKET_CORS_ORIGIN=http://164.90.225.146
-
-# Configuration serveur
-SERVER_HOST=0.0.0.0
+# Port du serveur backend (utilisé par server/index.ts)
+PORT=3001
