--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.0",
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.11.0",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -36,6 +37,7 @@
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.292.0",
     "next": "^14.0.0",
+    "pg": "^8.11.0",
     "postcss": "^8.4.0",
     "qrcode": "^1.5.4",
     "react": "^18.0.0",
